# elmo-fire-bets-backend

./: .gitignore  README.md  alembic.ini  database.py  main.py  openapi.json  pyproject.toml
models/: __init__.py  constants.py  db.py
routers/: auth.py  common.py  gambling_seasons.py  parlays.py  picks.py  slate_types.py  vetoes.py
schemas/: __init__.py  data.py  gambling_seasons.py
services/: common.py  metric_calculator.py  metric_counter.py  performance_time_series.py  season_performance_calculator.py
services/score_correctors/: score_corrector.py  score_corrector_2025.py
utils/: auth.py  env_vars.py  parlays.py
